# my-book-memo-app

./: .gitignore  compose.yml  db.Dockerfile
backend/: Cargo.toml  rustfmt.toml
backend/src/: app.rs  lib.rs  main.rs  repos.rs
backend/src/book/: handler.rs  repos.rs
backend/src/entity/: user.rs
backend/src/handler/: auth.rs  book.rs  memo.rs  mod.rs
backend/src/memo/: handler.rs  mod.rs  repos.rs
backend/src/modules/: validate_json.rs
backend/src/repos/: auth.rs  book.rs  memo.rs  mod.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/app/: consts.ts  root.tsx
frontend/app/components/BookCard/: BookCard.tsx
frontend/app/components/BookDetailModal/: BookDetailModal.tsx
frontend/app/components/ConfirmDialog/: ConfirmDialog.tsx
frontend/app/components/CreateBookModal/: CreateBookModal.tsx
frontend/app/components/MemoList/: MemoList.tsx
frontend/app/components/UserDropDown/: UserDropDown.tsx
frontend/app/hooks/: useInputForm.tsx
frontend/app/routes/: _index.tsx
frontend/app/routes/create-account/: index.tsx
frontend/app/routes/login/: index.tsx
frontend/app/types/: book.d.ts  memo.d.ts
frontend/app/utility/fetch/: my-fetch.ts
frontend/app/utility/login/: check-login.ts
init/: init.sql
migrations/: 20240906144941_book.sql  20240910123604_memo.sql  20241009032924_users.sql
