[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
reqwest = "0.12.7"
serde = { version = "1.0.209", features=["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features=["full"] }
chrono = "0.4.38"
axum = { version = "0.7.5", features=["macros"] }
sqlx = { version="0.8.2", features=["postgres", "runtime-tokio-native-tls", "chrono"] }
thiserror = "1.0.63"
dotenvy = "0.15.7"
uuid = { version = "1.10.0", features = ["v4"] }
tower-http = { version = "0.5.2", features = ["cors"] }
