[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
reqwest = "0.12.7"
serde = { version = "1.0.209", features=["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features=["full"] }
axum = { version = "0.7.5", features=["macros"] }
sqlx = { version="0.8.2", features=["postgres", "runtime-tokio-native-tls", "chrono"] }
thiserror = "1.0.63"
dotenvy = "0.15.7"
uuid = { version = "1.10.0", features = ["v4", "v7"] }
tower-http = { version = "0.6.1", features = ["cors"] }
axum-login = "0.16.0"
password-auth = "1.0.0"
tower-sessions = { version = "0.13.0", default-features = false, features = [
    "signed",
] }
tower-sessions-sqlx-store = { version = "0.14.1", features = ["postgres"] }
time = "0.3.36"
validator = { version = "0.18.1", features = ["derive"] }

